# SOI-linux-semaphores

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: concept.tex
include/: def.h  proc_data.h  production.h  qsem.h  queue.h  utility.h
src/: main.c  proc_data.c  production.c  qsem.c  queue.c  utility.c
tools/: freeshm.sh
